Added some tracking to the tutoring logging page in an attempt to get more information about what's causing the logging bug

--- a/templates/tutoring_logging.html
+++ b/templates/tutoring_logging.html
@@ -15,10 +15,16 @@
         </p>
         {% else %}
         <p>
+	  {% if last_logged_in %}
+             <p> Our records show your last sign to the logging system as: {{last_logged_in}} </p>
+	     <p> The time is currently: {{sign_out_time}} <p>
+	  {% endif %}
             Thanks for logging your tutoring! Just to confirm, we've logged {{ hours }} hours for you in this last session
             (please remember that we round up your last hour at the 45 minute mark). If you feel there has been an error, please
-            email <a href="mailto:webmaster@tbp.seas.ucla.edu">webmaster@tbp.seas.ucla.edu</a> to get it cleared up.
+            email <a href="mailto:webmaster@tbp.seas.ucla.edu">webmaster@tbp.seas.ucla.edu</a> to get it cleared up, providing as much information
+	    about the circumstances as possible.
        </p>
+	
         {% endif %}
     {% else %}
         {% if isTutoring %}
