--- a/templates/tutoring_logging.html
+++ b/templates/tutoring_logging.html
@@ -28,7 +28,7 @@
         {% endif %}
     {% else %}
         {% if isTutoring %}
-            <p>You've tutored {{ hours }} hours since you've signed in (For your convenience, we round up at the 45 minute mark. However, fractional hours are not counted)</p>
+            <p>You've tutored <strong>{{ hours }}</strong> hours since you've signed in (For your convenience, we round up at the 45 minute mark. However, fractional hours are not counted)</p>
             <form role="form" method="post">
                 {% csrf_token %}
                 <div class="form-group">
