Changes to error pages for turoing logging

--- a/templates/tutoring_logging.html
+++ b/templates/tutoring_logging.html
@@ -19,10 +19,10 @@
              <p> Our records show your last sign to the logging system as: {{last_logged_in}} </p>
 	     <p> The time is currently: {{sign_out_time}} <p>
 	  {% endif %}
-            Thanks for logging your tutoring! Just to confirm, we've logged {{ hours }} hours for you in this last session
-            (please remember that we round up your last hour at the 45 minute mark). If you feel there has been an error, please
-            email <a href="mailto:webmaster@tbp.seas.ucla.edu">webmaster@tbp.seas.ucla.edu</a> to get it cleared up, providing as much information
-	    about the circumstances as possible.
+            Thanks for logging your tutoring! Just to confirm, we've logged <font size="6">{{ hours }}</font> hours for you in this last session
+            (please remember that we round up your last hour at the 45 minute mark). 
+            <p> If you feel there has been an error, please email <a href="mailto:tutoring@tbp.seas.ucla.edu">tutoring@tbp.seas.ucla.edu</a> to get it cleared up, 
+	      <span style="color: red">providing a screenshot of this page </span> as well as any other relevant information about the circumstances in which this happened </p>
        </p>
 	
         {% endif %}
