--- a/templates/tutoring_feedback.html
+++ b/templates/tutoring_feedback.html
@@ -3,5 +3,5 @@
 {% block title %}Tutoring Hours{% endblock %}
 
 {% block content %}
-<iframe src="https://docs.google.com/forms/d/1VeyZKAKkRX-GzQd6fIrhl3l2oP6yeFB6WjBf1HQq-LY/viewform?embedded=true" seamless style="width:100%; min-height:120%;">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/1VeyZKAKkRX-GzQd6fIrhl3l2oP6yeFB6WjBf1HQq-LY/viewform?embedded=true" seamless style="width:100%; height:1000px; border:none">Loading...</iframe>
 {% endblock %}
